[package]
name = "colliding-blocks-and-pi"
description = "A simple simulation written in Rust inspired by 3Blue1Brown's video on colliding blocks that compute pi."
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.0"